Feat: Integrate Docker Container

--- a/api/BTS/BTS.Api/appsettings.Development.json
+++ b/api/BTS/BTS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MigrationDb": "Data Source=VINCENT;Initial Catalog=BTS.DB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "MigrationDb": "Data Source=bts.database;Initial Catalog=BTS.DB;User Id=sa; Password=P@ssw0rd;Trust Server Certificate=True;"
   }
 }
