--- a/api/BTS/BTS.Infrastructure/BTS.Infrastructure.csproj
+++ b/api/BTS/BTS.Infrastructure/BTS.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\BTS.Domain\BTS.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
