--- a/api/BTS/BTS.Api/appsettings.Development.json
+++ b/api/BTS/BTS.Api/appsettings.Development.json
@@ -5,7 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "localhost:3000",
+    "Audience": "localhost:3000",
+    "SecretKey": "991ea9cc-8fdc-4c26-a0e5-56575090225c"
+  },
   "ConnectionStrings": {
     "MigrationDb": "Data Source=bts.database;Initial Catalog=BTS.DB;User Id=sa; Password=P@ssw0rd;Trust Server Certificate=True;"
-  }
+  },
+  "AllowedHosts": "*"
 }
