Feat: Add Authorization

--- a/api/BTS/BTS.Api/appsettings.Development.json
+++ b/api/BTS/BTS.Api/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "Jwt": {
-    "Issuer": "localhost:3000",
-    "Audience": "localhost:3000",
+    "Issuer": "https://localhost:5001/",
+    "Audience": "https://localhost:5001/",
     "SecretKey": "991ea9cc-8fdc-4c26-a0e5-56575090225c"
   },
   "ConnectionStrings": {
