Feat: Add email sender

--- a/api/BTS/BTS.Api/appsettings.Development.json
+++ b/api/BTS/BTS.Api/appsettings.Development.json
@@ -10,6 +10,12 @@
     "Audience": "https://localhost:5001/",
     "SecretKey": "991ea9cc-8fdc-4c26-a0e5-56575090225c"
   },
+  "Smtp": {
+    "Host": "smtp.ethereal.email",
+    "Port": 587,
+    "User": "layla.rolfson79@ethereal.email",
+    "Password": "BHHD5ZWkb3tVyvKMbU"
+  },
   "ConnectionStrings": {
     "MigrationDb": "Data Source=bts.database;Initial Catalog=BTS.DB;User Id=sa; Password=P@ssw0rd;Trust Server Certificate=True;"
   },
