Feat: Add message broker using MassTransit and RabbitMQ

--- a/api/BTS/BTS.Api/appsettings.Development.json
+++ b/api/BTS/BTS.Api/appsettings.Development.json
@@ -16,6 +16,11 @@
     "User": "layla.rolfson79@ethereal.email",
     "Password": "BHHD5ZWkb3tVyvKMbU"
   },
+  "MessageBroker": {
+    "Host": "amqp://bts-mq:5672",
+    "User": "admin",
+    "Password": "P@ssw0rd"
+  },
   "ConnectionStrings": {
     "MigrationDb": "Data Source=bts.database;Initial Catalog=BTS.DB;User Id=sa; Password=P@ssw0rd;Trust Server Certificate=True;"
   },
